--- a/demo.ipynb
+++ b/demo.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -235,12 +235,12 @@
       "Pipeline profile:\n",
       "Stage       Latency (s)    Throughput (d/s)\n",
       "--------  -------------  ------------------\n",
-      "Stage1         0.174785             1.07098\n",
-      "Stage2         0.192589             1.07223\n",
-      "Stage3         0.189225             1.07225\n",
-      "Stage4         0.172093             1.06987\n",
-      "Stage5         0.182117             1.06914\n",
-      "Pipeline       0.910843             1.06914\n"
+      "Stage1         0.177527             1.11134\n",
+      "Stage2         0.167018             1.11083\n",
+      "Stage3         0.187201             1.10846\n",
+      "Stage4         0.181514             1.10897\n",
+      "Stage5         0.169232             1.1109\n",
+      "Pipeline       0.882524             1.1109\n"
      ]
     }
    ],
@@ -283,14 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting pipeline in serial...\n",
+      "Starting pipeline in parallel...\n",
       "Streaming data each 0.2 s...\n",
       "Waiting for 5 s...\n",
       "Stopping pipeline...\n",
@@ -305,12 +305,12 @@
       "Pipeline profile:\n",
       "Stage       Latency (s)    Throughput (d/s)\n",
       "--------  -------------  ------------------\n",
-      "Stage1         0.230675             4.36388\n",
-      "Stage2         0.21523              4.33035\n",
-      "Stage3         0.244283             4.11553\n",
-      "Stage4         0.244383             4.08065\n",
-      "Stage5         0.21612              4.08475\n",
-      "Pipeline       1.44614              4.08461\n"
+      "Stage1         0.230761             4.31824\n",
+      "Stage2         0.231476             4.26374\n",
+      "Stage3         0.230794             4.25046\n",
+      "Stage4         0.232133             4.23407\n",
+      "Stage5         0.241114             4.12177\n",
+      "Pipeline       1.46033              4.12178\n"
      ]
     }
    ],
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,8 +381,8 @@
     "    # First, create the pipeline instance, we want to use the profiler\n",
     "    pipeline = Pipeline(input_generator=generate_data, use_profiler=True)\n",
     "    # Now, add the stages to the pipeline.\n",
-    "    pipeline.add(DummyStage(\"Stage1\"))\n",
-    "    pipeline.add(DummyStage(\"Stage2\"))\n",
+    "    pipeline.add(DummyStage(\"StageA\"))\n",
+    "    pipeline.add(DummyStage(\"StageB\"))\n",
     "    pipeline.add(dummy_stage_func)\n",
     "    pipeline.add(dummy_stage_func)\n",
     "    return pipeline\n",
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,72 +433,6 @@
      "text": [
       "Starting pipeline in parallel...\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Stage_2:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\nriin\\AppData\\Local\\Programs\\Python\\Python310\\lib\\threading.py\", line 1016, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"c:\\Users\\nriin\\projects\\personal\\pystream-pipeline\\pystream\\pipeline\\parallel_pipeline.py\", line 101, in run\n",
-      "    self.run_loop()\n",
-      "  File \"c:\\Users\\nriin\\projects\\personal\\pystream-pipeline\\pystream\\pipeline\\parallel_pipeline.py\", line 123, in run_loop\n",
-      "    self.process_cleanup()\n",
-      "  File \"c:\\Users\\nriin\\projects\\personal\\pystream-pipeline\\pystream\\pipeline\\parallel_pipeline.py\", line 129, in process_cleanup\n",
-      "    self.stage.cleanup()\n",
-      "  File \"c:\\Users\\nriin\\projects\\personal\\pystream-pipeline\\pystream\\stage\\container.py\", line 51, in cleanup\n",
-      "    self.stage.cleanup()\n",
-      "AttributeError: 'function' object has no attribute 'cleanup'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Last output shape:\n",
-      "(480, 720, 3)\n",
-      "Number of processed data:\n",
-      "0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Stage_1:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\nriin\\AppData\\Local\\Programs\\Python\\Python310\\lib\\threading.py\", line 1016, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"c:\\Users\\nriin\\projects\\personal\\pystream-pipeline\\pystream\\pipeline\\parallel_pipeline.py\", line 101, in run\n",
-      "    self.run_loop()\n",
-      "  File \"c:\\Users\\nriin\\projects\\personal\\pystream-pipeline\\pystream\\pipeline\\parallel_pipeline.py\", line 123, in run_loop\n",
-      "    self.process_cleanup()\n",
-      "  File \"c:\\Users\\nriin\\projects\\personal\\pystream-pipeline\\pystream\\pipeline\\parallel_pipeline.py\", line 129, in process_cleanup\n",
-      "    self.stage.cleanup()\n",
-      "  File \"c:\\Users\\nriin\\projects\\personal\\pystream-pipeline\\pystream\\stage\\container.py\", line 51, in cleanup\n",
-      "    self.stage.cleanup()\n",
-      "AttributeError: 'function' object has no attribute 'cleanup'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pipeline has been cleaned-up\n",
-      "Data counter was reset to 0.\n",
-      "\n",
-      "Pipeline profile:\n",
-      "Stage       Latency (s)    Throughput (d/s)\n",
-      "--------  -------------  ------------------\n",
-      "Stage1         0.190238             5.29049\n",
-      "Stage2         0.213514             4.70103\n",
-      "Stage_1        0.20015              4.70682\n",
-      "Stage_2        0.194335             4.89007\n",
-      "Pipeline       1.26804              4.89025\n"
-     ]
     }
    ],
    "source": [
@@ -521,11 +455,8 @@
     "print()\n",
     "print(\"Last output shape:\")\n",
     "print(latest[\"data\"].shape)\n",
-    "print(\"Number of processed data:\")\n",
-    "print(stages[-1].count)\n",
     "pipeline.cleanup()\n",
     "print(\"Pipeline has been cleaned-up\")\n",
-    "print(f\"Data counter was reset to {stages[-1].count}.\")\n",
     "\n",
     "# Get the profile\n",
     "latency, throughput = pipeline.get_profiles()\n",
