--- a/demo.ipynb
+++ b/demo.ipynb
@@ -424,14 +424,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting pipeline in parallel...\n"
+      "Starting pipeline in parallel...\n",
+      "\n",
+      "Last output shape:\n",
+      "(480, 720, 3)\n",
+      "Pipeline has been cleaned-up\n",
+      "\n",
+      "Pipeline profile:\n",
+      "Stage       Latency (s)    Throughput (d/s)\n",
+      "--------  -------------  ------------------\n",
+      "StageA         0.209784             4.77214\n",
+      "StageB         0.213259             4.69376\n",
+      "Stage_7        0.209259             4.73992\n",
+      "Stage_8        0.203948             4.787\n",
+      "Pipeline       1.24364              4.78707\n"
      ]
     }
    ],
