revert non deps change

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating Stages"
+    "## Stage Definitions"
    ]
   },
   {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -177,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -223,13 +222,7 @@
      "text": [
       "Starting pipeline in serial...\n",
       "Streaming data each 0.2 s...\n",
-      "Waiting for 5 s...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Waiting for 5 s...\n",
       "Stopping pipeline...\n",
       "\n",
       "Last output shape:\n",
@@ -240,14 +233,14 @@
       "Data counter was reset to 0.\n",
       "\n",
       "Pipeline profile:\n",
-      "Stage                   Latency (s)    Throughput (d/s)\n",
-      "--------------------  -------------  ------------------\n",
-      "MainPipeline               0.885433             1.10035\n",
-      "MainPipeline__Stage1       0.168262             1.09003\n",
-      "MainPipeline__Stage2       0.170458             1.09568\n",
-      "MainPipeline__Stage3       0.182034             1.09805\n",
-      "MainPipeline__Stage4       0.182642             1.09975\n",
-      "MainPipeline__Stage5       0.181923             1.10035\n"
+      "Stage       Latency (s)    Throughput (d/s)\n",
+      "--------  -------------  ------------------\n",
+      "Stage1         0.177527             1.11134\n",
+      "Stage2         0.167018             1.11083\n",
+      "Stage3         0.187201             1.10846\n",
+      "Stage4         0.181514             1.10897\n",
+      "Stage5         0.169232             1.1109\n",
+      "Pipeline       0.882524             1.1109\n"
      ]
     }
    ],
@@ -290,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -305,19 +298,19 @@
       "Last output shape:\n",
       "(480, 720, 3)\n",
       "Number of processed data:\n",
-      "19\n",
+      "17\n",
       "Pipeline has been cleaned-up\n",
       "Data counter was reset to 0.\n",
       "\n",
       "Pipeline profile:\n",
-      "Stage                   Latency (s)    Throughput (d/s)\n",
-      "--------------------  -------------  ------------------\n",
-      "MainPipeline               1.15793              4.48034\n",
-      "MainPipeline__Stage1       0.215918             4.58622\n",
-      "MainPipeline__Stage2       0.218174             4.53008\n",
-      "MainPipeline__Stage3       0.204841             4.50127\n",
-      "MainPipeline__Stage4       0.20452              4.47497\n",
-      "MainPipeline__Stage5       0.210609             4.48047\n"
+      "Stage       Latency (s)    Throughput (d/s)\n",
+      "--------  -------------  ------------------\n",
+      "Stage1         0.230761             4.31824\n",
+      "Stage2         0.231476             4.26374\n",
+      "Stage3         0.230794             4.25046\n",
+      "Stage4         0.232133             4.23407\n",
+      "Stage5         0.241114             4.12177\n",
+      "Pipeline       1.46033              4.12178\n"
      ]
     }
    ],
@@ -359,7 +352,7 @@
     "\n",
     "- The throughput has been significantly increased, thanks to the parallelization of the pipeline\n",
     "- Thus, the number of processed data is increased\n",
-    "- You might get the latency slower than the serial, which is due to the resource utilization of your CPU. In this experiment, we run all of the stages at the same time."
+    "- You might get the latency slower than the serial, which is due to the resource utilization of your CPU. Now we run all of the stages at the same time."
    ]
   },
   {
@@ -380,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -445,13 +438,13 @@
       "Pipeline has been cleaned-up\n",
       "\n",
       "Pipeline profile:\n",
-      "Stage                    Latency (s)    Throughput (d/s)\n",
-      "---------------------  -------------  ------------------\n",
-      "MainPipeline                1.15573              5.02434\n",
-      "MainPipeline__StageA        0.203491             4.92226\n",
-      "MainPipeline__StageB        0.188007             4.90051\n",
-      "MainPipeline__Stage_1       0.190019             4.91418\n",
-      "MainPipeline__Stage_2       0.188901             5.02444\n"
+      "Stage       Latency (s)    Throughput (d/s)\n",
+      "--------  -------------  ------------------\n",
+      "StageA         0.209784             4.77214\n",
+      "StageB         0.213259             4.69376\n",
+      "Stage_7        0.209259             4.73992\n",
+      "Stage_8        0.203948             4.787\n",
+      "Pipeline       1.24364              4.78707\n"
      ]
     }
    ],
@@ -483,164 +476,6 @@
     "print()\n",
     "print(\"Pipeline profile:\")\n",
     "print_profile(latency, throughput)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Mixed Pipeline"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It is also possible to combine serial and parallel pipeline, i.e., embed a pipeline in another pipeline. To do that, you need to convert the child pipeline into a compatible form. It is easy, you only need to invoke `as_stage` method of `Pipeline`."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this experiment, we will embed a serial pipeline into a parallel pipeline. First, let's define the child pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pystream.pipeline.pipeline.Pipeline at 0x216908f3700>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def create_child_pipeline() -> Pipeline:\n",
-    "    # First, create the pipeline instance, we want to use the profiler\n",
-    "    pipeline = Pipeline(input_generator=generate_data, use_profiler=True)\n",
-    "    # Now, add the stages to the pipeline.\n",
-    "    pipeline.add(DummyStage(\"StageA\"))\n",
-    "    pipeline.add(DummyStage(\"StageB\"))\n",
-    "    return pipeline\n",
-    "\n",
-    "child_pipeline = create_child_pipeline()\n",
-    "child_pipeline.serialize()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then, create a parent pipeline with the child pipeline in it"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pystream.pipeline.pipeline.Pipeline at 0x216908f3dc0>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def create_parent_pipeline(child_pipeline: Pipeline) -> Pipeline:\n",
-    "    # First, create the pipeline instance, we want to use the profiler\n",
-    "    pipeline = Pipeline(input_generator=generate_data, use_profiler=True)\n",
-    "    # Now, add the stages to the pipeline. The last stage is the child pipeline.\n",
-    "    pipeline.add(DummyStage(\"Stage1\"))\n",
-    "    pipeline.add(DummyStage(\"Stage2\"))\n",
-    "    pipeline.add(child_pipeline.as_stage(), \"ChildPipeline\")\n",
-    "    return pipeline\n",
-    "\n",
-    "parent_pipeline = create_parent_pipeline(child_pipeline)\n",
-    "parent_pipeline.parallelize(block_input=True)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's try it out!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Last output shape:\n",
-      "(480, 720, 3)\n",
-      "Pipeline has been cleaned-up\n",
-      "\n",
-      "Pipeline profile:\n",
-      "Stage                                  Latency (s)    Throughput (d/s)\n",
-      "-----------------------------------  -------------  ------------------\n",
-      "MainPipeline                              1.97543              2.75196\n",
-      "MainPipeline__Stage1                      0.191864             4.40831\n",
-      "MainPipeline__Stage2                      0.191059             3.57146\n",
-      "MainPipeline__ChildPipeline               0.363558             2.75198\n",
-      "MainPipeline__ChildPipeline__StageA       0.187975             2.74605\n",
-      "MainPipeline__ChildPipeline__StageB       0.175553             2.75198\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Generate and forward the data for ON_CYCLE times\n",
-    "ON_CYCLE = 10\n",
-    "for _ in range(ON_CYCLE):\n",
-    "    data = {\n",
-    "        \"data\": np.random.randint(0, 255, size=(480, 720, 3), dtype=np.uint8)\n",
-    "    }\n",
-    "    parent_pipeline.forward(data)\n",
-    "time.sleep(5)\n",
-    "\n",
-    "# Let's try read the last result and do cleanup\n",
-    "latest = parent_pipeline.get_results()\n",
-    "print()\n",
-    "print(\"Last output shape:\")\n",
-    "print(latest[\"data\"].shape)\n",
-    "parent_pipeline.cleanup()\n",
-    "print(\"Pipeline has been cleaned-up\")\n",
-    "\n",
-    "# Get the profile\n",
-    "latency, throughput = parent_pipeline.get_profiles()\n",
-    "print()\n",
-    "print(\"Pipeline profile:\")\n",
-    "print_profile(latency, throughput)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You might have noticed that in the profiling reports, the pipeline levels are separated with `__`."
    ]
   }
  ],
